--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write  # 👈 this is the fix
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
